k8s/jotunheim/apps/grafana/httproute.yaml
# k8s/jotunheim/apps/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: niflheim
      namespace: traefik
      sectionName: websecure
  hostnames:
    - grafana.niflheim.xiiisins.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
